<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sub_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relegion"
            android:textColor="@color/headercolor"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="#606060"></View>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/comedy_iv"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:layout_marginRight="@dimen/_7sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:background="@drawable/selector_interest"
                    android:src="@drawable/religionspirtuality_interest" />

                <CheckBox
                    android:id="@+id/religion_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/toggle"
                    android:scaleType="fitStart" />


            </FrameLayout>

            <TextView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/relegionspirtual"
                android:textColor="@color/headercolor"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/mediafilm_iv"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:layout_marginRight="@dimen/_7sdp"

                    android:layout_marginTop="@dimen/_7sdp"
                    android:background="@drawable/selector_interest"
                    android:src="@drawable/charity_interest" />

                <CheckBox
                    android:id="@+id/charity_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/toggle"
                    android:scaleType="fitStart" />


            </FrameLayout>

            <TextView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                android:text="@string/charity"
                android:textColor="@color/headercolor"

                android:textSize="@dimen/_10sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/homelife_iv"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:layout_marginRight="@dimen/_7sdp"
                    android:layout_marginTop="@dimen/_7sdp"

                    android:background="@drawable/selector_interest"
                    android:src="@drawable/familyedu_interest" />


                <CheckBox
                    android:id="@+id/family_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/toggle"
                    android:scaleType="fitStart" />


            </FrameLayout>

            <TextView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                android:text="@string/familyedu"
                android:textColor="@color/headercolor"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/healthsub_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/healthsub"
            android:textColor="@color/headercolor"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="#606060"></View>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/hobbies_iv"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:layout_marginRight="@dimen/_7sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:background="@drawable/selector_interest"
                    android:src="@drawable/fooddrink_interest" />

                <CheckBox
                    android:id="@+id/food_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/toggle"
                    android:scaleType="fitStart" />


            </FrameLayout>

            <TextView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                android:text="@string/fooddrink"
                android:textColor="@color/headercolor"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/musicarts_iv"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:layout_marginRight="@dimen/_7sdp"

                    android:layout_marginTop="@dimen/_7sdp"
                    android:background="@drawable/selector_interest"
                    android:src="@drawable/fitness_interest" />

                <CheckBox
                    android:id="@+id/witness_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/toggle"
                    android:scaleType="fitStart" />


            </FrameLayout>

            <TextView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                android:text="@string/wellness"
                android:textColor="@color/headercolor"

                android:textSize="@dimen/_10sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/sports_iv"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:layout_marginRight="@dimen/_7sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:background="@drawable/selector_interest"
                    android:src="@drawable/sports_interest" />


                <CheckBox
                    android:id="@+id/sports_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/toggle"
                    android:scaleType="fitStart" />


            </FrameLayout>

            <TextView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                android:text="@string/sports"
                android:textColor="@color/headercolor"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/submit_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/submit_arrow" />
</LinearLayout>